--- a/.github/workflows/sonatype-scan.yml
+++ b/.github/workflows/sonatype-scan.yml
@@ -17,12 +17,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        
       - name: Setup JDK
         uses: actions/setup-java@v4
         with:
-          java-version: 21
           cache: maven
-          distribution: 'adopt'
+          java-version: '11'
+          distribution: 'temurin'
+          architecture: x64
       
       - name: Build with Maven
         run: |
